Updated the download page for version 2.1.0 (http://www.nmr-relax.com/download.html).

--- a/download.html
+++ b/download.html
@@ -48,7 +48,7 @@
   <div id="Current_release" class="main_box">
     <h1>Current release</h1>
 
-      <p>The current stable release is relax version 2.0.0.</p>
+      <p>The current stable release is relax version 2.1.0 (12 July 2012).</p>
 
       <p>relax binaries have been pre-compiled for a number of computer architectures.  These are based on Python 2.5 or 2.6 but can work with other Python versions on certain operating systems and certain architectures.  However if not, or if binaries for your system do not exist, please download the source release (the compilation of binaries is not a pre-requesite for using relax).  Note that some binary distribution files may not correspond to the most up to date version of relax.  If so, please download the up-to-date source release instead.  If you would like to contribute binary packages for your specific architecture, please read the 'Open source infrastructure' chapter of the relax manual for details.</p>
 
@@ -82,16 +82,16 @@
       <td><strong>File size (bytes)</strong></td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-2.0.0.GNU-Linux.i686.tar.bz2" title="relax">relax-2.0.0.GNU-Linux.i686.tar.bz2</a></td>
-      <td><tt><small>7e7b9bc5be6184e11063e0f53708a79b</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-2.0.0.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>21491773</td>
+      <td><a href="http://download.gna.org/relax/relax-2.1.0.GNU-Linux.i686.tar.bz2" title="relax">relax-2.1.0.GNU-Linux.i686.tar.bz2</a></td>
+      <td><tt><small>cbcb3115318ce0039b654fc6be776cda</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-2.1.0.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>22045763</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-2.0.0.GNU-Linux.x86_64.tar.bz2" title="relax">relax-2.0.0.GNU-Linux.x86_64.tar.bz2</a></td>
-      <td><tt><small>9a09bb45c9d50a1de01efde0e3efb7c2</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-2.0.0.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>21503597</td>
+      <td><a href="http://download.gna.org/relax/relax-2.1.0.GNU-Linux.x86_64.tar.bz2" title="relax">relax-2.1.0.GNU-Linux.x86_64.tar.bz2</a></td>
+      <td><tt><small>fddbe4db3cc14a425cf7bb1af24d40e7</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-2.1.0.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>22058393</td>
     </tr>
   </tbody>
 </table>
@@ -125,10 +125,10 @@
       <td><strong>File size (bytes)</strong></td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-2.0.0.Win32.zip" title="relax">relax-2.0.0.Win32.zip</a></td>
-      <td><tt><small>a847e815bb3a24a5a3c1a33485374d7d</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-2.0.0.Win32.zip.sig" title="relax GPG signature">signature</a></td>
-      <td>23546121</td>
+      <td><a href="http://download.gna.org/relax/relax-2.1.0.Win32.zip" title="relax">relax-2.1.0.Win32.zip</a></td>
+      <td><tt><small>a29f259b6ad1636af600f1ecc9cf1b7a</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-2.1.0.Win32.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>24106525</td>
     </tr>
   </tbody>
 </table>
@@ -168,10 +168,10 @@
       <td><strong>File size (bytes)</strong></td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-2.0.0.Darwin.dmg" title="relax">relax-2.0.0.Darwin.dmg</a></td>
-      <td><tt><small>9b0eb805c7f6c3f6c0d85425fce0d77f</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-2.0.0.Darwin.dmg.sig" title="relax GPG signature">signature</a></td>
-      <td>157680591</td>
+      <td><a href="http://download.gna.org/relax/relax-2.1.0.Darwin.dmg" title="relax">relax-2.1.0.Darwin.dmg</a></td>
+      <td><tt><small>4bca18ac75242e2f48cac793210af35b</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-2.1.0.Darwin.dmg.sig" title="relax GPG signature">signature</a></td>
+      <td>159065388</td>
     </tr>
   </tbody>
 </table>
@@ -223,16 +223,16 @@
       <td><strong>File size (bytes)</strong></td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-2.0.0.src.tar.bz2" title="relax">relax-2.0.0.src.tar.bz2</a></td>
-      <td><tt><small>3449d0fca777925b0f15a10b88a72a85</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-2.0.0.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>21502578</td>
+      <td><a href="http://download.gna.org/relax/relax-2.1.0.src.tar.bz2" title="relax">relax-2.1.0.src.tar.bz2</a></td>
+      <td><tt><small>31de49e99d26df5421fa81b086418725</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-2.1.0.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>22054720</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-2.0.0.src.zip" title="relax">relax-2.0.0.src.zip</a></td>
-      <td><tt><small>6bd88af7414427c92caede2770b188e4</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-2.0.0.src.zip.sig" title="relax GPG signature">signature</a></td>
-      <td>23584389</td>
+      <td><a href="http://download.gna.org/relax/relax-2.1.0.src.zip" title="relax">relax-2.1.0.src.zip</a></td>
+      <td><tt><small>4efce1d7238c5d87f5b82d7543d07d36</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-2.1.0.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>24146965</td>
     </tr>
   </tbody>
 </table>
@@ -311,6 +311,58 @@
 
       <p>Descriptions of these releases are available from the <a href='https://gna.org/news/?group=relax'>relax news page</a>.  These files can all be found on the <a href="http://download.gna.org/relax">relax download site</a>.</p>
 
+      <h2>The 2.1 line</h2>
+
+<table cellspacing="10">
+  <tbody>
+    <tr>
+      <td><strong>Distribution package</strong></td>
+      <td><strong>MD5 checksum</strong></td>
+      <td><strong>GPG signature</strong></td>
+      <td><strong>File size (bytes)</strong></td>
+    </tr>
+
+    <tr><td><em><a href="http://gna.org/forum/forum.php?forum_id=2354">Version 2.1.0</a> (2012-07-12)</em></td></tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-2.1.0.GNU-Linux.i686.tar.bz2" title="relax">relax-2.1.0.GNU-Linux.i686.tar.bz2</a></td>
+      <td><tt><small>cbcb3115318ce0039b654fc6be776cda</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-2.1.0.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>22045763</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-2.1.0.GNU-Linux.x86_64.tar.bz2" title="relax">relax-2.1.0.GNU-Linux.x86_64.tar.bz2</a></td>
+      <td><tt><small>fddbe4db3cc14a425cf7bb1af24d40e7</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-2.1.0.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>22058393</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-2.1.0.Win32.zip" title="relax">relax-2.1.0.Win32.zip</a></td>
+      <td><tt><small>a29f259b6ad1636af600f1ecc9cf1b7a</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-2.1.0.Win32.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>24106525</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-2.1.0.Darwin.dmg" title="relax">relax-2.1.0.Darwin.dmg</a></td>
+      <td><tt><small>4bca18ac75242e2f48cac793210af35b</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-2.1.0.Darwin.dmg.sig" title="relax GPG signature">signature</a></td>
+      <td>159065388</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-2.1.0.src.tar.bz2" title="relax">relax-2.1.0.src.tar.bz2</a></td>
+      <td><tt><small>31de49e99d26df5421fa81b086418725</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-2.1.0.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>22054720</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-2.1.0.src.zip" title="relax">relax-2.1.0.src.zip</a></td>
+      <td><tt><small>4efce1d7238c5d87f5b82d7543d07d36</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-2.1.0.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>24146965</td>
+    </tr>
+  </tbody>
+</table>
+
+
       <h2>The 2.0 line</h2>
 
 <table cellspacing="10">
@@ -340,6 +392,12 @@
       <td><tt><small>a847e815bb3a24a5a3c1a33485374d7d</small></tt></td>
       <td><a href="http://download.gna.org/relax/relax-2.0.0.Win32.zip.sig" title="relax GPG signature">signature</a></td>
       <td>23546121</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-2.0.0.Darwin.dmg" title="relax">relax-2.0.0.Darwin.dmg</a></td>
+      <td><tt><small>9b0eb805c7f6c3f6c0d85425fce0d77f</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-2.0.0.Darwin.dmg.sig" title="relax GPG signature">signature</a></td>
+      <td>157680591</td>
     </tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-2.0.0.src.tar.bz2" title="relax">relax-2.0.0.src.tar.bz2</a></td>
