Added my ICMRBS 2012 poster to the relax website.
The abstract and poster will be available as links at http://www.nmr-relax.com/events.html.

--- a/events.html
+++ b/events.html
@@ -90,6 +90,21 @@
           <td><strong>Presenter:</strong> S&eacute;bastien Morin</td>
           <td><a href="http://www.nmr-relax.com/conferences/poster__MOOT_2009_Ottawa_Canada.pdf">Poster</a></td>
         </tr>
+
+        <tr>
+          <td class="table_title" colspan="5"><strong>2012 ICMRBS</strong></td>
+        </tr>
+        <tr>
+          <td><a href="http://www.pasteur.fr/infosci/conf/sb/ICMRBS/"><img src="images/icmrbs2012/icmrbs2012.png" alt="ICMRBS 2012" class="image"/></a></td>
+          <td colspan="4">XXV<sup>th</sup> International Conference on Magnetic Resonance in Biological Systems (ICMRBS), Lyon, France.</td>
+        </tr>
+        <tr>
+          <td></td>
+          <td><strong>Presenter:</strong> Edward d'Auvergne</td>
+          <td><a href="http://www.nmr-relax.com/conferences/edward_abstract_ICMRBS_2012.pdf">Abstract</a></td>
+          <td><a href="http://www.nmr-relax.com/conferences/edward_poster_ICMRBS_2012.pdf">Poster</a></td>
+        </tr>
+
       </tbody>
     </table>
     </div>
