Updated the disclaimer for the http://www.nmr-relax.com/events.html webpage.

--- a/events.html
+++ b/events.html
@@ -113,7 +113,7 @@
     <div class="main_h2">
      <h2>Disclaimer</h2>
 
-     <p>These documents shall be re-used with permission from the authors.</p>
+     <p>These documents may only be re-used with permission from the authors.  All content is protected by copyright.</p>
 
     </div>
   </div>
