Reformatting of the relax events webpage http://www.nmr-relax.com/events.html.

--- a/events.html
+++ b/events.html
@@ -16,6 +16,26 @@
 <head>
   <title>relax events</title>
   <!--#include virtual="head.html" -->
+<style type="text/css">
+#conf-table td {
+	padding: 10px 10px 10px 10px;
+	vertical-align: top;
+}
+#conf-subtable tr td {
+	padding: 0px 0px 0px 0px;
+	vertical-align: top;
+}
+#conf-table-icon {
+    width: 120px;
+	padding: 0px 0px 0px 0px;
+    text-align:center;
+}
+#conf-table-title {
+    font-style:italic;
+	vertical-align: bottom;
+    width: 18%;
+}
+</style>
 </head>
 
 <body>
@@ -33,80 +53,111 @@
   <div class="main_h2">
     <h2>Posters</h2>
 
-    <table cellpadding="10">
+    <table id="conf-table">
       <tbody>
         <tr>
-          <td class="table_title" colspan="5"><strong>2004 ANZMAG</strong></td>
+          <td id="conf-table-icon"><a href="http://www.pasteur.fr/infosci/conf/sb/ICMRBS/"><img src="images/icmrbs2012/icmrbs2012.png" alt="ICMRBS 2012" class="image"/></a></td>
+          <td>
+            <table id="conf-subtable">
+              <tbody>
+                <tr><td><strong>ICMRBS 2012</strong></td></tr>
+                <tr><td id="conf-table-title">Conference:</td><td>XXV<sup>th</sup> International Conference on Magnetic Resonance in Biological Systems (ICMRBS).</td></tr>
+                <tr><td id="conf-table-title">Location:</td><td>Lyon, France.</td></tr>
+                <tr><td id="conf-table-title">Title:</td><td>relax and its applications for the study of internal and domain motions in biomolecules.</td></tr>
+                <tr><td id="conf-table-title">Authors:</td><td>Edward d'Auvergne* and Christian Griesinger.</td></tr>
+                <tr><td id="conf-table-title">Abstract:</td><td><a href="http://www.nmr-relax.com/conferences/edward_abstract_ICMRBS_2012.pdf">PDF</a></td></tr>
+                <tr><td id="conf-table-title">Poster:</td><td><a href="http://www.nmr-relax.com/conferences/edward_poster_ICMRBS_2012.pdf">PDF</a></td></tr>
+              </tbody>
+            </table>
+          </td>
         </tr>
-        <tr>
-          <td><a href="http://www.anzmag.com.au/conferences.php"><img src="images/anzmag_2004/barossa_mini.png" alt="ANZMAG 2004" class="image"/></a></td>
-          <td colspan="4">The Australia and New Zealand society for Magnetic Resonance (ANZMAG) Conference, Barossa Valley, Australia.</td>
-        </tr>
-        <tr>
-          <td></td>
-          <td><strong>Presenter:</strong> Edward d'Auvergne</td>
-          <td><a href="http://www.nmr-relax.com/conferences/edward_abstract_ANZMAG_2004.txt">Abstract</a></td>
-          <td><a href="http://www.nmr-relax.com/conferences/edward_poster_ANZMAG_2004.pdf">Poster</a></td>
-        </tr>
-
-        <tr>
-          <td class="table_title" colspan="5"><strong>2006 ICMRBS</strong></td>
-        </tr>
-        <tr>
-          <td><a href="http://medusa.nmr.mpibpc.mpg.de/icmrbs/"><img src="images/icmrbs2006/silouette_mini.png" alt="ICMRBS 2006" class="image"/></a></td>
-          <td colspan="4">XXII<sup>nd</sup> International Conference on Magnetic Resonance in Biological Systems (ICMRBS), Goettingen, Germany.</td>
-        </tr>
-        <tr>
-          <td></td>
-          <td><strong>Presenter:</strong> Edward d'Auvergne</td>
-          <td><a href="http://www.nmr-relax.com/conferences/edward_abstract_ICMRBS_2006_Goettingen_Germany.txt">Abstract</a></td>
-          <td><a href="http://www.nmr-relax.com/conferences/edward_poster_ICMRBS_2006_Goettingen_Germany.pdf">Poster</a></td>
-        </tr>
-
-        <tr>
-          <td class="table_title" colspan="5"><strong>2009 ENC</strong></td>
-        </tr>
-        <tr>
-          <td><a href="http://www.enc-conference.org/"><img src="images/50thENC.jpg" alt="ENC 2009" class="image"/></a></td>
-          <td colspan="4">50<sup>th</sup> Experimental Nuclear Magnetic Resonance Conference (ENC), Asilomar, CA, USA.</td>
-        </tr>
-        <tr>
-          <td></td>
-          <td><strong>Presenter:</strong> Edward d'Auvergne</td>
-          <td><a href="http://www.nmr-relax.com/conferences/edward_enc2009_abstract.pdf">Abstract</a></td>
-          <td><a href="http://www.nmr-relax.com/conferences/poster__ENC_2009_Asilomar_USA.pdf">Poster</a></td>
-          <td><a href="http://www.nmr-relax.com/conferences/poster__ENC_2009_Asilomar_USA_files.tar.bz2">Poster files (figures and more)</a></td>
-        </tr>
-
-        <tr>
-          <td class="table_title" colspan="5"><strong>2009 MOOT</strong></td>
-        </tr>
-        <tr>
-          <td><a href="http://www.mootnmr.org/"><img src="images/MOOT_logo_mini.png" alt="22nd MOOT" class="image"/></a></td>
-          <td colspan="4">22<sup>nd</sup> MOOT, Ottawa, ON, Canada.</td>
-        </tr>
-        <tr>
-          <td></td>
-          <td><strong>Presenter:</strong> S&eacute;bastien Morin</td>
-          <td><a href="http://www.nmr-relax.com/conferences/poster__MOOT_2009_Ottawa_Canada.pdf">Poster</a></td>
-        </tr>
-
-        <tr>
-          <td class="table_title" colspan="5"><strong>2012 ICMRBS</strong></td>
-        </tr>
-        <tr>
-          <td><a href="http://www.pasteur.fr/infosci/conf/sb/ICMRBS/"><img src="images/icmrbs2012/icmrbs2012.png" alt="ICMRBS 2012" class="image"/></a></td>
-          <td colspan="4">XXV<sup>th</sup> International Conference on Magnetic Resonance in Biological Systems (ICMRBS), Lyon, France.</td>
-        </tr>
-        <tr>
-          <td></td>
-          <td><strong>Presenter:</strong> Edward d'Auvergne</td>
-          <td><a href="http://www.nmr-relax.com/conferences/edward_abstract_ICMRBS_2012.pdf">Abstract</a></td>
-          <td><a href="http://www.nmr-relax.com/conferences/edward_poster_ICMRBS_2012.pdf">Poster</a></td>
-        </tr>
-
       </tbody>
     </table>
+
+    <table id="conf-table">
+      <tbody>
+        <tr>
+          <td id="conf-table-icon"><a href="http://www.mootnmr.org/"><img src="images/MOOT_logo_mini.png" alt="22nd MOOT" class="image"/></a></td>
+          <td>
+            <table id="conf-subtable">
+              <tbody>
+                <tr><td><strong>MOOT 2009</strong></td></tr>
+                <tr><td id="conf-table-title">Conference:</td><td>22<sup>nd</sup> MOOT NMR Minisymposium.</td></tr>
+                <tr><td id="conf-table-title">Location:</td><td>Ottawa, ON, Canada.</td></tr>
+                <tr><td id="conf-table-title">Title:</td><td>A toolkit for dynamics relaxing the BMRB.</td></tr>
+                <tr><td id="conf-table-title">Authors:</td><td>Edward d'Auvergne, Chris MacRaild, S&eacute;bastien Morin*, Gary Thompson, Eldon Ulrich.</td></tr>
+                <tr><td id="conf-table-title">Poster:</td><td><a href="http://www.nmr-relax.com/conferences/poster__MOOT_2009_Ottawa_Canada.pdf">PDF</a></td></tr>
+              </tbody>
+            </table>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+
+    <table id="conf-table">
+      <tbody>
+        <tr>
+          <td id="conf-table-icon"><a href="http://www.enc-conference.org/"><img src="images/50thENC.jpg" alt="ENC 2009" class="image"/></a></td>
+          <td>
+            <table id="conf-subtable">
+              <tbody>
+                <tr><td><strong>ENC 2009</strong></td></tr>
+                <tr><td id="conf-table-title">Conference:</td><td>50<sup>th</sup> Experimental Nuclear Magnetic Resonance Conference (ENC).</td></tr>
+                <tr><td id="conf-table-title">Location:</td><td>Asilomar, CA, USA.</td></tr>
+                <tr><td id="conf-table-title">Title:</td><td>A toolkit for dynamics and how to relax the BMRB.</td></tr>
+                <tr><td id="conf-table-title">Authors:</td><td>Edward d'Auvergne*, Chris MacRaild, S&eacute;bastien Morin, Gary Thompson, Eldon Ulrich.</td></tr>
+                <tr><td id="conf-table-title">Abstract:</td><td><a href="http://www.nmr-relax.com/conferences/edward_enc2009_abstract.pdf">PDF</a></td></tr>
+                <tr><td id="conf-table-title">Poster:</td><td><a href="http://www.nmr-relax.com/conferences/poster__ENC_2009_Asilomar_USA.pdf">PDF</a></td></tr>
+                <tr><td id="conf-table-title">Misc:</td><td><a href="http://www.nmr-relax.com/conferences/poster__ENC_2009_Asilomar_USA_files.tar.bz2">Poster files (figures, etc.)</a></td></tr>
+              </tbody>
+            </table>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+
+    <table id="conf-table">
+      <tbody>
+        <tr>
+          <td id="conf-table-icon"><a href="http://medusa.nmr.mpibpc.mpg.de/icmrbs/"><img src="images/icmrbs2006/silouette_mini.png" alt="ICMRBS 2006" class="image"/></a></td>
+          <td>
+            <table id="conf-subtable">
+              <tbody>
+                <tr><td><strong>ICMRBS 2006</strong></td></tr>
+                <tr><td id="conf-table-title">Conference:</td><td>XXII<sup>nd</sup> International Conference on Magnetic Resonance in Biological Systems (ICMRBS).</td></tr>
+                <tr><td id="conf-table-title">Location:</td><td>Goettingen, Germany.</td></tr>
+                <tr><td id="conf-table-title">Title:</td><td>The program relax:  Improving optimisation and model-free analysis in reverse.</td></tr>
+                <tr><td id="conf-table-title">Authors:</td><td>Edward d'Auvergne* and Paul Gooley.</td></tr>
+                <tr><td id="conf-table-title">Abstract:</td><td><a href="http://www.nmr-relax.com/conferences/edward_abstract_ICMRBS_2006_Goettingen_Germany.txt">PDF</a></td></tr>
+                <tr><td id="conf-table-title">Poster:</td><td><a href="http://www.nmr-relax.com/conferences/edward_poster_ICMRBS_2006_Goettingen_Germany.pdf">PDF</a></td></tr>
+              </tbody>
+            </table>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+
+    <table id="conf-table">
+      <tbody>
+        <tr>
+          <td id="conf-table-icon"><a href="http://www.anzmag.com.au/conferences.php"><img src="images/anzmag_2004/barossa_mini.png" alt="ANZMAG 2004" class="image"/></a></td>
+          <td>
+            <table id="conf-subtable">
+              <tbody>
+                <tr><td><strong>ANZMAG 2004</strong></td></tr>
+                <tr><td id="conf-table-title">Conference:</td><td>The Australia and New Zealand society for Magnetic Resonance (ANZMAG) Conference.</td></tr>
+                <tr><td id="conf-table-title">Location:</td><td>Barossa Valley, Australia.</td></tr>
+                <tr><td id="conf-table-title">Title:</td><td>Improving the model-free analysis of protein dynamics.</td></tr>
+                <tr><td id="conf-table-title">Authors:</td><td>Edward d'Auvergne* and Paul Gooley.</td></tr>
+                <tr><td id="conf-table-title">Abstract:</td><td><a href="http://www.nmr-relax.com/conferences/edward_abstract_ANZMAG_2004.txt">PDF</a></td></tr>
+                <tr><td id="conf-table-title">Poster:</td><td><a href="http://www.nmr-relax.com/conferences/edward_poster_ANZMAG_2004.pdf">PDF</a></td></tr>
+              </tbody>
+            </table>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+
     </div>
 
 
