Added the Sun et al., 2011 and Erdelyi et al., 2011 references to http://www.nmr-relax.com.
The citations have been added to http://www.nmr-relax.com/refs.html and the references to
http://www.nmr-relax.com/features.html.

--- a/features.html
+++ b/features.html
@@ -50,16 +50,16 @@
     <p>The following NMR relaxation data analysis techniques are currently supported by relax:</p>
 
     <ul>
-     <li>Model-free analysis (<a href="refs.html#LipariSzabo82a">Lipari and Szabo, 1982a</a>; <a href="refs.html#LipariSzabo82a">Lipari and Szabo, 1982b</a>; <a href="refs.html#Clore90">Clore et al., 1990</a>)</li>
-     <li>Reduced spectral density mapping (<a href="refs.html#Farrow95">Farrow et al., 1995</a>, <a href="refs.html#Lefevre96">Lefevre et al., 1996</a>)</li>
-     <li>Consistency testing - the validation of multiple field NMR relaxation data (<a href="refs.html#Morin09">Morin and Gagn&eacute;, 2009</a>)</li>
-     <li>Exponential curve fitting (to find the R<sub>1</sub> and R<sub>2</sub> NMR relaxation rates)</li>
-     <li>Steady-state NOE calculation</li>
-     <li>Determination of absolute stereochemistry of flexible molecules (using isotropic and anisotropic NMR parameters (NOE, ROE, and RDC) combined with MD simulation or simulated annealing, and ORD)</li>
-     <li>The N-state model for investigating domain motions</li>
-     <li>The frame order theory</li>
-     <li>Conformational analysis of paramagnetically tagged sugars</li>
-     <li>Analysis of RDCs and PCSs using ensemble of structures (the N-state model of dynamics)</li>
+     <li>Model-free analysis (<a href="refs.html#LipariSzabo82a">Lipari and Szabo, 1982a</a>; <a href="refs.html#LipariSzabo82a">Lipari and Szabo, 1982b</a>; <a href="refs.html#Clore90">Clore et al., 1990</a> and the specific implementation of <a href="refs.html#dAuvergneGooley03">d'Auvergne and Gooley, 2003</a>, <a href="refs.html#dAuvergneGooley06">dAuvergne and Gooley, 2006</a>, <a href="refs.html#dAuvergneGooley07">dAuvergne and Gooley, 2007</a>, <a href="refs.html#dAuvergneGooley08a">dAuvergne and Gooley, 2008a</a>, <a href="refs.html#dAuvergneGooley08b">dAuvergne and Gooley, 2008b</a>).</li>
+     <li>Reduced spectral density mapping (<a href="refs.html#Farrow95">Farrow et al., 1995</a>, <a href="refs.html#Lefevre96">Lefevre et al., 1996</a>).</li>
+     <li>Consistency testing - the validation of multiple field NMR relaxation data (<a href="refs.html#Morin09">Morin and Gagn&eacute;, 2009</a>).</li>
+     <li>Exponential curve fitting (to find the R<sub>1</sub> and R<sub>2</sub> NMR relaxation rates).</li>
+     <li>Steady-state NOE calculation.</li>
+     <li>Determination of absolute stereochemistry of flexible molecules via the N-state model using isotropic and anisotropic NMR parameters such as NOE, ROE, and RDC combined with MD simulation or simulated annealing, and ORD (<a href="refs.html#Sun11">Sun11</a>).</li>
+     <li>The N-state model for investigating domain motions.</li>
+     <li>The frame order theory.</li>
+     <li>Conformational analysis of paramagnetically tagged sugars via the N-state model (<a href="refs.html#Erdelyi11">Erdelyi11</a>).</li>
+     <li>Analysis and comparison of ensembles of structures using RDCs, PCSs, NOEs, etc. (the N-state model of dynamics).</li>
     </ul>
 
   </div>
