--- a/refs.html
+++ b/refs.html
@@ -95,6 +95,14 @@
     </ul>
   </div>
 
+  <div class="main_h2" id="n_state">
+   <h2>The N-state model analyses</h2>
+    <ul class="ref_ul">
+     <li class="ref_li" id="Sun11">Sun, H., d'Auvergne, E. J., Reinscheid, U. M., Dias, L. C., Andrade, C. K. Z., Rocha, R. O., and Griesinger, C. (2011). Bijvoet in solution reveals unexpected stereoselectivity in a michael addition. <em>Chemistry-A European Journal</em>, <strong>17</strong>(6), 1811-1817.</li>
+     <li class="ref_li" id="Erdelyi11">Erdelyi, M., d'Auvergne, E., Navarro-Vazquez, A., Leonov, A., and Griesinger, C. (2011). Dynamics of the Glycosidic Bond: Conformational Space of Lactose. <em>Chemistry-A European Journal</em>, <strong>17</strong>(34), 9368-9376.</li>
+    </ul>
+  </div>
+
   <div class="main_h2" id="misc">
    <h2>Misc.</h2>
     <ul class="ref_ul">
