Added links for all abstracts via DOI numbers on http://www.nmr-relax.com/refs.html.

--- a/refs.html
+++ b/refs.html
@@ -49,24 +49,24 @@
 
    <h3>Original Lipari-Szabo theory</h3>
     <ul class="ref_ul">
-     <li class="ref_li" id="LipariSzabo82a">Lipari, G. and Szabo, A. (1982a).  Model-free approach to the interpretation of nuclear magnetic-resonance relaxation in macromolecules I. Theory and range of validity. <em>J. Am. Chem. Soc.</em>, <strong>104</strong>(17), 4546–4559.</li>
+     <li class="ref_li" id="LipariSzabo82a">Lipari, G. and Szabo, A. (1982a).  Model-free approach to the interpretation of nuclear magnetic-resonance relaxation in macromolecules I. Theory and range of validity. <em>J. Am. Chem. Soc.</em>, <strong>104</strong>(17), 4546-4559.  (<a href="http://dx.doi.org/10.1021/ja00381a009">abstract</a>)</li>
 
-     <li class="ref_li" id="LipariSzabo82b">Lipari, G. and Szabo, A. (1982b).  Model-free approach to the interpretation of nuclear magnetic-resonance relaxation in macromolecules II. Analysis of experimental results. <em>J. Am. Chem. Soc.</em>, <strong>104</strong>(17), 4559–4570.</li>
+     <li class="ref_li" id="LipariSzabo82b">Lipari, G. and Szabo, A. (1982b).  Model-free approach to the interpretation of nuclear magnetic-resonance relaxation in macromolecules II. Analysis of experimental results. <em>J. Am. Chem. Soc.</em>, <strong>104</strong>(17), 4559-4570.  (<a href="http://dx.doi.org/10.1021/ja00381a010">abstract</a>)</li>
     </ul>
 
    <h3>Extended model-free theory</h3>
     <ul class="ref_ul">
-     <li class="ref_li" id="Clore90">Clore, G. M., Szabo, A., Bax, A., Kay, L. E., Driscoll, P. C., and Gronenborn, A. M. (1990b).  Deviations from the simple 2-parameter model-free approach to the interpretation of N-15 nuclear magnetic-relaxation of proteins. <em>J. Am. Chem. Soc.</em>, <strong>112</strong>(12), 4989–4991.</li>
+     <li class="ref_li" id="Clore90">Clore, G. M., Szabo, A., Bax, A., Kay, L. E., Driscoll, P. C., and Gronenborn, A. M. (1990b).  Deviations from the simple 2-parameter model-free approach to the interpretation of N-15 nuclear magnetic-relaxation of proteins. <em>J. Am. Chem. Soc.</em>, <strong>112</strong>(12), 4989-4991.  (<a href="http://dx.doi.org/10.1021/ja00168a070">abstract</a>)</li>
     </ul>
 
    <h3>Model-free model selection</h3>
     <ul class="ref_ul">
-     <li class="ref_li" id="dAuvergneGooley03">d'Auvergne, E. J. and Gooley, P. R. (2003).  The use of model selection in the model-free analysis of protein dynamics. <em>J. Biomol. NMR</em>, <strong>25</strong>(1), 25–39. (<a href="http://dx.doi.org/10.1023/A:1021902006114">abstract</a>)</li>
+     <li class="ref_li" id="dAuvergneGooley03">d'Auvergne, E. J. and Gooley, P. R. (2003).  The use of model selection in the model-free analysis of protein dynamics. <em>J. Biomol. NMR</em>, <strong>25</strong>(1), 25-39. (<a href="http://dx.doi.org/10.1023/A:1021902006114">abstract</a>)</li>
     </ul>
 
    <h3>Model-free model elimination</h3>
     <ul class="ref_ul">
-     <li class="ref_li" id="dAuvergneGooley06">d'Auvergne, E. J. and Gooley, P. R. (2006).  Model-free model elimination:  A new step in the model-free dynamic analysis of NMR relaxation data. <em>J. Biomol. NMR</em>, <strong>35</strong>(2), 117–135. (<a href="http://dx.doi.org/10.1007/s10858-006-9007-z">abstract</a>)</li>
+     <li class="ref_li" id="dAuvergneGooley06">d'Auvergne, E. J. and Gooley, P. R. (2006).  Model-free model elimination:  A new step in the model-free dynamic analysis of NMR relaxation data. <em>J. Biomol. NMR</em>, <strong>35</strong>(2), 117-135. (<a href="http://dx.doi.org/10.1007/s10858-006-9007-z">abstract</a>)</li>
     </ul>
 
    <h3>Model-free minimisation</h3>
@@ -98,23 +98,23 @@
   <div class="main_h2" id="n_state">
    <h2>The N-state model analyses</h2>
     <ul class="ref_ul">
-     <li class="ref_li" id="Sun11">Sun, H., d'Auvergne, E. J., Reinscheid, U. M., Dias, L. C., Andrade, C. K. Z., Rocha, R. O., and Griesinger, C. (2011). Bijvoet in solution reveals unexpected stereoselectivity in a michael addition. <em>Chemistry-A European Journal</em>, <strong>17</strong>(6), 1811-1817.</li>
-     <li class="ref_li" id="Erdelyi11">Erdelyi, M., d'Auvergne, E., Navarro-Vazquez, A., Leonov, A., and Griesinger, C. (2011). Dynamics of the Glycosidic Bond: Conformational Space of Lactose. <em>Chemistry-A European Journal</em>, <strong>17</strong>(34), 9368-9376.</li>
+     <li class="ref_li" id="Sun11">Sun, H., d'Auvergne, E. J., Reinscheid, U. M., Dias, L. C., Andrade, C. K. Z., Rocha, R. O., and Griesinger, C. (2011). Bijvoet in solution reveals unexpected stereoselectivity in a michael addition. <em>Chemistry-A European Journal</em>, <strong>17</strong>(6), 1811-1817.  (<a href="http://dx.doi.org/10.1002/chem.201002520">abstract</a>)</li>
+     <li class="ref_li" id="Erdelyi11">Erdelyi, M., d'Auvergne, E., Navarro-Vazquez, A., Leonov, A., and Griesinger, C. (2011). Dynamics of the Glycosidic Bond: Conformational Space of Lactose. <em>Chemistry-A European Journal</em>, <strong>17</strong>(34), 9368-9376.  (<a href="http://dx.doi.org/10.1002/chem.201100854">abstract</a>)</li>
     </ul>
   </div>
 
   <div class="main_h2" id="misc">
    <h2>Misc.</h2>
     <ul class="ref_ul">
-     <li class="ref_li" id="Chen04"> Chen, J., Brooks, 3rd, C. L., and Wright, P. E. (2004).  Model-free analysis of protein dynamics: assessment of accuracy and model selection protocols based on molecular dynamics simulation. <em>J. Biomol. NMR</em>, <strong>29</strong>(3), 243-257.</li>
+     <li class="ref_li" id="Chen04"> Chen, J., Brooks, 3rd, C. L., and Wright, P. E. (2004).  Model-free analysis of protein dynamics: assessment of accuracy and model selection protocols based on molecular dynamics simulation. <em>J. Biomol. NMR</em>, <strong>29</strong>(3), 243-257.  (<a href="http://dx.doi.org/10.1023/b:jnmr.0000032504.70912.58">abstract</a>)</li>
 
-     <li class="ref_li" id="Farrow95">Farrow, N. A., Zhang, O., Forman-Kay, J. D., Kay, L. E. (1995).  Comparison of the backbone dynamics of a folded and an unfolded SH3 domain existing in equilibrium in aqueous buffer. <em>Biochem.</em>, <strong>34</strong>(3), 868-878.</li>
+     <li class="ref_li" id="Farrow95">Farrow, N. A., Zhang, O., Forman-Kay, J. D., Kay, L. E. (1995).  Comparison of the backbone dynamics of a folded and an unfolded SH3 domain existing in equilibrium in aqueous buffer. <em>Biochem.</em>, <strong>34</strong>(3), 868-878.  (<a href="http://dx.doi.org/10.1021/bi00003a021">abstract</a>)</li>
 
      <li class="ref_li" id="Horne07">Horne J., d'Auvergne E. J., Coles M., Velkov T., Chin Y., Charman W. N., Prankerd R., Gooley P. R., Scanlon M. J. (2007).  Probing the flexibility of the DsbA oxidoreductase from <em>Vibrio cholerae</em> - a <sup>15</sup>N-<sup>1</sup>H heteronuclear NMR relaxation analysis of oxidized and reduced forms of DsbA. <em>J. Mol. Biol.</em>, <strong>371</strong>(3), 703-716.  (<a href="http://dx.doi.org/10.1016/j.jmb.2007.05.067">abstract</a>)</li>
 
-     <li class="ref_li" id="Lefevre96">Lefevre, J. F., Dayie, K. T., Peng, J. W., and Wagner, G. (1996).  Internal mobility in the partially folded DNA binding and dimerization domains of GAL4:  NMR analysis of the N-H spectral density functions. <em>Biochem.</em>, <strong>35</strong>(8), 2674–2686.</li>
+     <li class="ref_li" id="Lefevre96">Lefevre, J. F., Dayie, K. T., Peng, J. W., and Wagner, G. (1996).  Internal mobility in the partially folded DNA binding and dimerization domains of GAL4:  NMR analysis of the N-H spectral density functions. <em>Biochem.</em>, <strong>35</strong>(8), 2674-2686.  (<a href="http://dx.doi.org/10.1021/bi9526802">abstract</a>)</li>
 
-     <li class="ref_li" id="Mandel95">Mandel, A. M., Akke, M., and Palmer, 3rd, A. G. (1995).  Backbone dynamics of <em>Escherichia coli</em> ribonuclease HI: correlations with structure and function in an active enzyme. <em>J. Mol. Biol.</em>, <strong>246</strong>(1), 144–163.</li>
+     <li class="ref_li" id="Mandel95">Mandel, A. M., Akke, M., and Palmer, 3rd, A. G. (1995).  Backbone dynamics of <em>Escherichia coli</em> ribonuclease HI: correlations with structure and function in an active enzyme. <em>J. Mol. Biol.</em>, <strong>246</strong>(1), 144-163.  (<a href="http://dx.doi.org/10.1006/jmbi.1994.0073">abstract</a>)</li>
     </ul>
   </div>
 
