Added the Fushman et al., 1999 reference for the consistency testing to http://www.nmr-relax.com.
This was added to the pages:
    http://www.nmr-relax.com/features.html
    http://www.nmr-relax.com/refs.html

--- a/refs.html
+++ b/refs.html
@@ -91,7 +91,8 @@
   <div class="main_h2" id="consistency_testing">
    <h2>Consistency testing in relax</h2>
     <ul class="ref_ul">
-     <li class="ref_li" id="Morin09"> Morin, S. and Gagn&eacute;, S. M. (2009). Simple tests for the validation of multiple field spin relaxation data. <em>J. Biomol. NMR</em>, <strong>45</strong>(4), 361-372.  (<a href="http://dx.doi.org/10.1007/s10858-009-9381-4">abstract</a>)</li>
+     <li class="ref_li" id="Morin09">Morin, S. and Gagn&eacute;, S. M. (2009). Simple tests for the validation of multiple field spin relaxation data. <em>J. Biomol. NMR</em>, <strong>45</strong>(4), 361-372.  (<a href="http://dx.doi.org/10.1007/s10858-009-9381-4">abstract</a>)</li>
+     <li class="ref_li" id="Fushman99">Fushman, D., Tjandra, N., and Cowburn, D. (1999). An approach to direct determination of protein dynamics from 15N NMR relaxation at multiple fields, independent of variable 15N chemical shift anisotropy and chemical exchange contributions. <em>J. Am. Chem. Soc.</em>, <strong>121</strong>(37), 8577-8582. (<a href="http://dx.doi.org/10.1021/ja9904991">abstract</a>)</li>
     </ul>
   </div>
 
