--- a/features.html
+++ b/features.html
@@ -52,7 +52,7 @@
     <ul>
      <li>Model-free analysis (<a href="refs.html#LipariSzabo82a">Lipari and Szabo, 1982a</a>; <a href="refs.html#LipariSzabo82a">Lipari and Szabo, 1982b</a>; <a href="refs.html#Clore90">Clore et al., 1990</a> and the specific implementation of <a href="refs.html#dAuvergneGooley03">d'Auvergne and Gooley, 2003</a>, <a href="refs.html#dAuvergneGooley06">dAuvergne and Gooley, 2006</a>, <a href="refs.html#dAuvergneGooley07">dAuvergne and Gooley, 2007</a>, <a href="refs.html#dAuvergneGooley08a">dAuvergne and Gooley, 2008a</a>, <a href="refs.html#dAuvergneGooley08b">dAuvergne and Gooley, 2008b</a>).</li>
      <li>Reduced spectral density mapping (<a href="refs.html#Farrow95">Farrow et al., 1995</a>, <a href="refs.html#Lefevre96">Lefevre et al., 1996</a>).</li>
-     <li>Consistency testing - the validation of multiple field NMR relaxation data (<a href="refs.html#Morin09">Morin and Gagn&eacute;, 2009</a>).</li>
+     <li>Consistency testing - the validation of multiple field NMR relaxation data (<a href="refs.html#Morin09">Morin and Gagn&eacute;, 2009</a>, <a href="refs.html#Fushman99">Fushman et al., 1999</a>).</li>
      <li>Exponential curve fitting (to find the R<sub>1</sub> and R<sub>2</sub> NMR relaxation rates).</li>
      <li>Steady-state NOE calculation.</li>
      <li>Determination of absolute stereochemistry of flexible molecules via the N-state model using isotropic and anisotropic NMR parameters such as NOE, ROE, and RDC combined with MD simulation or simulated annealing, and ORD (<a href="refs.html#Sun11">Sun11</a>).</li>
